--- a/templates/index.html
+++ b/templates/index.html
@@ -1,8 +1,6 @@
 {% extends "base.html" %}
 {% block content %}
-<div class="m-2"><h4>Organization</h4></div>
-<div class="m-2"><h4>Poster</h4></div>
-<div class="m-2"><a class="btn btn-light" href="{% url 'Poster_Opgave_list' %}">Opgave Listing</a></div>
-<div class="m-2"><a class="btn btn-light" href="{% url 'Poster_Godkendelse_list' %}">Godkendelse Listing</a></div>
-<div class="m-2"><a class="btn btn-light" href="{% url 'Organization_Bruger_list' %}">Bruger Listing</a></div>
+<div class="m-2"><h4>Velkommen til hjemmesiden for Costa Del Sletta's immigrationsmyndigheder</h4></div>
+<div class="m-2"><h4>Vi er desværre ikke helt nået i mål med siden endnu...</h4></div>
+<div class="m-2"><h4>- Men tak for besøget!</h4></div>
 {% endblock %}
