--- a/Poster/templates/Poster/godkendelse_by_bruger.html
+++ b/Poster/templates/Poster/godkendelse_by_bruger.html
@@ -4,6 +4,23 @@
 <p> 
   Herunder kan i se status på jeres godkendelser. Opdater siden for at hente nyeste godkendelser.
   </p>
+
+  <h3>Aftensmad</h3>
+<p> 
+Du mødes med din gruppe senest 18.30 ved jeres skilt, og spiser aftensmad.
+</p>
+<h3>Effektiviserings task force</h3>
+<p> 
+Fra 18.45 kan man få godkendelser blot ved at møde op.
+</p>
+<h3>Biosecutiry</h3>
+<p> 
+  Når i er færdige med at spise, og har fået de sidste godkendelser, kan i gå igennem biosecurity
+  </p>
+<p> 
+Vær opmærksom på at det ikke er tilladt at tage madvarer med gennem biosecurity. Spis derfor aftensmad samlet med din gruppe (alle fire hold) inden.
+</p>
+
 <ul>
     <table class="table">
       <tr>
@@ -19,13 +36,18 @@
   </table>
 </ul>
 
-<h3>Tidsplan</h3>
+<h3>Aftensmad</h3>
 <p> 
-Immigrationsmyndighederne åbner kl. 16.00
+Du mødes med din gruppe senest 18.30 ved jeres skilt, og spiser aftensmad.
 </p>
+<h3>Effektiviserings task force</h3>
 <p> 
-  Når godkendelserne fra Ministerie A til og med Q er godkendt, må i gå til Post Ø - Biosecurity. 
+Fra 18.45 kan man få godkendelser blot ved at møde op.
 </p>
+<h3>Biosecutiry</h3>
+<p> 
+  Når i er færdige med at spise, og har fået de sidste godkendelser, kan i gå igennem biosecurity
+  </p>
 <p> 
 Vær opmærksom på at det ikke er tilladt at tage madvarer med gennem biosecurity. Spis derfor aftensmad samlet med din gruppe (alle fire hold) inden.
 </p>
